--- a/src/tailwind/Flexbox/flex-tw01.html
+++ b/src/tailwind/Flexbox/flex-tw01.html
@@ -10,39 +10,39 @@
     <h1 class="text-2xl font-bold mb-4">Welcome to the Flex HTML Page</h1>
 
     <div class="flex items-center border-2 border-black min-h-[125px] justify-center">
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px]">1</div>
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px]">2</div>
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px]">3</div>
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px]">4</div>
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px]">5</div>
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px]">6</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px]">1</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px]">2</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px]">3</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px]">4</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px]">5</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px]">6</div>
     </div>
     
     <div class="flex items-center border-2 border-black min-h-[125px] justify-between">
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px]">1</div>
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px]">2</div>
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px]">3</div>
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px]">4</div>
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px]">5</div>
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px]">6</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px]">1</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px]">2</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px]">3</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px]">4</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px]">5</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px]">6</div>
     </div>
 
     <div class="flex items-center border-2 border-black min-h-[125px] justify-around">
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px]">1</div>
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px]">2</div>
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px]">3</div>
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px]">4</div>
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px]">5</div>
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px]">6</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px]">1</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px]">2</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px]">3</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px]">4</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px]">5</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px]">6</div>
     </div>
 
     <div class="flex items-center border-2 border-black min-h-[125px] gap-2.5">
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px] mr-auto">1</div>
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px]">2</div>
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px]">3</div>
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px]">4</div>
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px]">5</div>
-        <div class="grid items-center bg-blue-500 border-2 border-black text-white text-center h-[100px] w-[100px] ml-auto">6</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px] mr-auto">1</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px]">2</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px]">3</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px]">4</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px]">5</div>
+        <div class="flex items-center justify-center bg-blue-500 border-2 border-black text-white h-[100px] w-[100px] ml-auto">6</div>
     </div>
 </body>
 </html>
