Moving things around

--- a/src/raw/CSS Menu/CssCollapsible.html
+++ b/src/raw/CSS Menu/CssCollapsible.html
@@ -45,7 +45,7 @@
   <body>
     <header>
         <figure>
-            <img src="./content/favicon-32x32.png" alt="Logo" />
+            <img src="../content/favicon-32x32.png" alt="Logo" />
         </figure>        
       <nav>
         <details class="parent p1">
