--- a/src/raw/Flexbox/index.html
+++ b/src/raw/Flexbox/index.html
@@ -1,48 +1,52 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flexbox HTML</title>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
     <h1>Welcome to the Flex HTML Page</h1>
 
+    <h2>P1</h2>
     <div class="parent p1">
-        <div class="box b1">1</div>
-        <div class="box b2">2</div>
-        <div class="box b3">3</div>
-        <div class="box b4">4</div>
-        <div class="box b5">5</div>
-        <div class="box b6">6</div>
+      <div class="box b1">1</div>
+      <div class="box b2">2</div>
+      <div class="box b3">3</div>
+      <div class="box b4">4</div>
+      <div class="box b5">5</div>
+      <div class="box b6">6</div>
     </div>
-    
+
+    <h2>P2</h2>
     <div class="parent p2">
-        <div class="box b1">1</div>
-        <div class="box b2">2</div>
-        <div class="box b3">3</div>
-        <div class="box b4">4</div>
-        <div class="box b5">5</div>
-        <div class="box b6">6</div>
+      <div class="box b1">1</div>
+      <div class="box b2">2</div>
+      <div class="box b3">3</div>
+      <div class="box b4">4</div>
+      <div class="box b5">5</div>
+      <div class="box b6">6</div>
     </div>
 
+    <h2>P3</h2>
     <div class="parent p3">
-        <div class="box b1">1</div>
-        <div class="box b2">2</div>
-        <div class="box b3">3</div>
-        <div class="box b4">4</div>
-        <div class="box b5">5</div>
-        <div class="box b6">6</div>
+      <div class="box b1">1</div>
+      <div class="box b2">2</div>
+      <div class="box b3">3</div>
+      <div class="box b4">4</div>
+      <div class="box b5">5</div>
+      <div class="box b6">6</div>
     </div>
 
+    <h2>P4</h2>
     <div class="parent p4">
-        <div class="box b1">1</div>
-        <div class="box b2">2</div>
-        <div class="box b3">3</div>
-        <div class="box b4">4</div>
-        <div class="box b5">5</div>
-        <div class="box b6">6</div>
+      <div class="box b1">1</div>
+      <div class="box b2">2</div>
+      <div class="box b3">3</div>
+      <div class="box b4">4</div>
+      <div class="box b5">5</div>
+      <div class="box b6">6</div>
     </div>
-</body>
+  </body>
 </html>
